--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.7.1",
+    "tsparticles": "^3.9.1",
+    "tsparticles-engine": "^2.12.0",
     "unique-names-generator": "^4.7.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
